fixed some overflow issues

--- a/css/index.css
+++ b/css/index.css
@@ -91,6 +91,7 @@ main section .clients-list {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-wrap: wrap;
   margin-top: 3em;
   padding: 1em;
   gap: 2rem;
