--- a/source/globals/_main.scss
+++ b/source/globals/_main.scss
@@ -17,6 +17,7 @@ main {
             display: flex;
             align-items: center;
             justify-content: center;
+            flex-wrap: wrap;
             margin-top: 3em;
             padding: 1em;
             gap: 2rem;
